<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cuisineInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="34dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/your_cuisine_goes_here"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#AFA9A9"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/enter_your_minimum_ratings"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingInput"
        app:layout_constraintStart_toStartOf="@+id/cuisineInput"
        app:layout_constraintTop_toBottomOf="@+id/cuisineInput"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="53dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/suggestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="201dp"
        android:fontFamily="@font/inter_semibold"
        android:onClick="curateSuggestions"
        android:text="@string/curate_suggestions"
        android:textColorLink="#CCA6A6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingInput"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ratingInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/your_ratings_go_here"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#AFA9A9"
        app:layout_constraintBottom_toTopOf="@+id/suggestBtn"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/enter_a_cuisine_that_you_love"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cuisineInput"
        app:layout_constraintStart_toStartOf="@+id/cuisineInput"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>